Expose language search result (#635)
* expose language for search result resource

* expose language for search result

* align testcontainers versions

* add test data

* add test data

* add test data

* add test data

* add search integration test for language exposure

* format code